dynamic router router/config.json
Signed-off-by: zdy1988 <virus_zhh@126.com>

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ License: You must have a valid license purchased only from themeforest(the above
     <!--<link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=all" rel="stylesheet" type="text/css" />-->
     <link rel="shortcut icon" href="./static/favicon.ico" />
   </head>
-  <body>
+  <body style="overflow-y: scroll;">
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
